--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Edward's Portfolio Webpage</title>
+		<title>Edward's Portfolio</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -35,8 +35,8 @@
 					<section id="intro" class="wrapper style1 fullscreen fade-up">
 						<div class="inner">
 							<h1>Edward</h1>
-							<p>Hey there! I am a software engineer <a href="http://html5up.net">HTML5 UP</a><br />
-							looking for a cool first gig! I've worked with broadly on the front-end with React and dabble in Node too! </p>
+							<p>Hey there! I am a web developer<a href="http://html5up.net">HTML5 UP</a><br />
+							looking for a cool first gig! </p>
 							<ul class="actions">
 								<li><a href="#one" class="button scrolly">See my work!</a></li>
 							</ul>
@@ -52,8 +52,9 @@
 									<h2>Dividewise</h2>
 									<p>
 										Dividewise is my clone of the bill-splitting website Splitwise.
-										I wrote it with Ruby on Rails with PostgreSQL on the backend and React, Redux, CSS and HTML on the frontend.
-										More recently, I have been refactoring the CSS styling with styled components!
+										On the backend, I wrote it with Ruby on Rails as the MVC and PostgreSQL as the database. The frontend was a work of React, Redux, Styled Components, CSS and HTML.
+										More recently, I've stuck in a google authentication inside the Rails controller and google login page in React. 
+										I especially enjoyed adding tons of authorizing logic to make sure only people with the proper access could see and change bills because I believe that is important when it comes to pecuniary concerns.
 									</p>
 									<ul class="actions">
 										<li><a href="generic.html" class="button">Learn more</a></li>
