--- a/index.html
+++ b/index.html
@@ -34,11 +34,11 @@
 				<!-- Intro -->
 					<section id="intro" class="wrapper style1 fullscreen fade-up">
 						<div class="inner">
-							<h1>Edward</h1>
-							<p>Hey there! I am a web developer<a href="http://html5up.net">HTML5 UP</a><br />
-							looking for a cool first gig! </p>
+							<h1>Edward, front-end software engineer</h1>
+							<p>Hey there! I am a web developer
+							looking for a cool first gig!/p>
 							<ul class="actions">
-								<li><a href="#one" class="button scrolly">See my work!</a></li>
+								<li><a href="#one" class="button scrolly">See my work</a></li>
 							</ul>
 						</div>
 					</section>
@@ -67,13 +67,10 @@
 							<div class="content">
 								<div class="inner">
 									<h2>Typing Fantasy</h2>
-									<p>Typing Fantasy uses Javascript, Canvas, CSS and the principles of OOP. Kirby Kount was the first app I
-									created. In its original incarnation, it was simply cawpable of generating math problems in Japanese. But like every good
-									game, there was a sequel. I added an educational game using sprites and Canvas as well as Cantonese and Mandarin support
-									and text-to-character and text-to-audio. Kirby Kount is definitely the most fun I've had building anything. Try it out!
-</p>
+									<p>Typing Fantasy uses Javascript, Canvas, CSS and the principles of OOP. I used a combination of fetching google translation APIs to voice the words that appear
+										above enemies and tr. Be sure to try it out!
 									<ul class="actions">
-										<li><a href="generic.html" class="button">Learn more</a></li>
+										<li><a href="http://cryptic-escarpment-31838.herokuapp.com/" class="button">Learn more</a></li>
 									</ul> 
 								</div>
 							</div>
