--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 										I especially enjoyed adding tons of authenticating logic to make sure only people with the proper access could see and change bills because I believe that is important when it comes to pecuniary concerns.
 									</p>
 									<ul class="actions">
-										<li><a href="https://dividewise.herokuapp.com/" class="button">Learn more</a></li>
+										<li><a href="https://dividewise.herokuapp.com/" class="button">Split a bill!</a></li>
 									</ul>
 								</div>
 							</div>
@@ -72,7 +72,7 @@
 										in a json file to fit the interchange use-case. Keeping track of rendered frames and "layers" of what was on top of what was a real joy for me in this project.
 										Be sure to try it out!
 									<ul class="actions">
-										<li><a href="https://cryptic-escarpment-31838.herokuapp.com/" class="button">Learn more</a></li>
+										<li><a href="https://cryptic-escarpment-31838.herokuapp.com/" class="button">Show off your typing skills!</a></li>
 									</ul> 
 								</div>
 							</div>
@@ -87,7 +87,7 @@
 									Data 'streams' like that of a user-input walk duration were leveraged by the MongoDB database and shown off to the world to keep users engaged and informed of a walk-duration recommendation.
 									</p>
 									<ul class="actions">
-										<li><a href="https://pure-eyrie-29492.herokuapp.com/" class="button">Learn more</a></li>
+										<li><a href="https://pure-eyrie-29492.herokuapp.com/" class="button">Trade some stock!</a></li>
 									</ul>
 								</div>
 							</div>
