--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 						<div class="inner">
 							<h1>Edward, front-end software engineer</h1>
 							<p>Hey there! I am a web developer
-							looking for a cool first gig!/p>
+							looking for a cool first gig! </p>
 							<ul class="actions">
 								<li><a href="#one" class="button scrolly">See my work</a></li>
 							</ul>
