--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
 					<section id="intro" class="wrapper style1 fullscreen fade-up">
 						<div class="inner">
 							<h1>Edward, front-end software engineer</h1>
-							<p>Hey there! I am a web developer
-							looking for a cool first gig! </p>
+							<p>Hey there! I am a web developer with a passion for useful and fun apps. I fell in love... etc at a point in time
+							</p>
 							<ul class="actions">
 								<li><a href="#one" class="button scrolly">See my work</a></li>
 							</ul>
@@ -52,8 +52,8 @@
 									<h2>Dividewise</h2>
 									<p>
 										Dividewise is my clone of the bill-splitting website Splitwise.
-										On the backend, I wrote it with Ruby on Rails as the MVC and PostgreSQL as the database. The frontend was a work of React, Redux, Styled Components, CSS and HTML.
-										More recently, I've stuck in a google authentication inside the Rails controller with a google login page for ease of adoption!
+										On the backend, I wrote it using the Ruby on Rails MVC framework and PostgreSQL as the database. The frontend was a work of React, Redux, Styled Components, CSS and HTML.
+										More recently, I've stuck in a google authentication inside the Rails controller with a google login page for OAuth!
 										I especially enjoyed adding tons of authenticating logic to make sure only people with the proper access could see and change bills because I believe that is important when it comes to pecuniary concerns.
 									</p>
 									<ul class="actions">
@@ -82,6 +82,8 @@
 							<div class="content">
 								<div class="inner">
 									<h2>Bone Throw</h2>
+									rewrite:
+									is a fullstack appl;ication that leverages xyz technologies. One of the main features was of keeping track of sensitive info like a dogs weight which we chose to store in a browsers local storage rather than in a database to keept hat info private 
 									<p>Bone Throw is a showcase of in-browser functionality like Local Storage to keep track of sensitive info like a dog's weight on users' browsers rather than in a traditional database.
 									Furthermore I made a Python Django API that fetched from a Yahoo stocks API and transformed that stock data into a continuous wave with another physics API before then sending it off to Bone Throw for the user to see as a beautifully rendered Charts.js data chart!
 									Data 'streams' like that of a user-input walk duration were leveraged by the MongoDB database and shown off to the world to keep users engaged and informed of a walk-duration recommendation.
@@ -106,6 +108,7 @@
 									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
 								</section>
 								<section> 
+									<i class="fab fa-js-square"></i>
 									<span class="icon solid major fa-js-square"></span>
 									<h3>Aliquam sed nullam</h3>
 									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
