--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 								<div class="inner">
 									<h2>Bone Throw</h2>
 									rewrite:
-									is a fullstack appl;ication that leverages xyz technologies. One of the main features was of keeping track of sensitive info like a dogs weight which we chose to store in a browsers local storage rather than in a database to keept hat info private 
+									is a fullstack application that leverages xyz technologies. One of the main features was of keeping track of sensitive info like a dogs weight which we chose to store in a browsers local storage rather than in a database to keept hat info private 
 									<p>Bone Throw is a showcase of in-browser functionality like Local Storage to keep track of sensitive info like a dog's weight on users' browsers rather than in a traditional database.
 									Furthermore I made a Python Django API that fetched from a Yahoo stocks API and transformed that stock data into a continuous wave with another physics API before then sending it off to Bone Throw for the user to see as a beautifully rendered Charts.js data chart!
 									Data 'streams' like that of a user-input walk duration were leveraged by the MongoDB database and shown off to the world to keep users engaged and informed of a walk-duration recommendation.
@@ -120,20 +120,12 @@
 									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
 								</section>
 								<section>
+									<i class="fab fa-js-square"></i>
 									<span class="icon solid major fa-desktop"></span>
 									<h3>Veroeros quis lorem</h3>
 									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
 								</section>
-								<section>
-									<span class="icon solid major fa-link"></span>
-									<h3>Urna quis bibendum</h3>
-									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
-								</section>
-								<section>
-									<span class="icon major fa-gem"></span>
-									<h3>Aliquam urna dapibus</h3> 
-									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
-								</section>
+						
 							</div>
 							<ul class="actions">
 								<li><a href="generic.html" class="button">Learn more</a></li>
@@ -145,7 +137,7 @@
 					<section id="three" class="wrapper style1 fade-up">
 						<div class="inner">
 							<h2>Get in touch</h2>
-							<p>I am actively looking for opportunities to code!</p>
+							<p>I am actively looking for opportunities!</p>
 							<div class="split style1">
 								<section>
 									<form method="post" action="#">
@@ -174,10 +166,7 @@
 											<h3>Email</h3>
 											<a href="#">edward@utexas.edu</a>
 										</li>
-										<li>
-											<h3>Phone</h3>
-											<span>(832) 630-8527</span>
-										</li>
+
 										<li>
 											<h3>Links</h3>
 											<ul class="icons">
@@ -197,7 +186,7 @@
 			<footer id="footer" class="wrapper style1-alt">
 				<div class="inner">
 					<ul class="menu">
-						<li>&copy; Edward 2020.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+						<li>&copy; Edward 2020.</li><li>Design: <a>HTML5 UP</a></li>
 					</ul>
 				</div>
 			</footer>
