--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Edward's Portfolio</title>
+		<title>Edward's site!</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -34,9 +34,10 @@
 				<!-- Intro -->
 					<section id="intro" class="wrapper style1 fullscreen fade-up">
 						<div class="inner">
-							<h1>Edward, front-end software engineer</h1>
-							<p>Hey there! I am a web developer with a passion for useful and fun apps. I fell in love... etc at a point in time
-							</p>
+							<h1>Edward, software engineer</h1>
+							<p>Hey there! I am a web developer with a passion for working on useful and fun apps. In trying to learn colloquial Chinese, I coded a chatroom that would English chat into Chinese, and have been fascinated since. More recently,
+								I wrote a typing game
+								
 							<ul class="actions">
 								<li><a href="#one" class="button scrolly">See my work</a></li>
 							</ul>
