--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Edward's site!</title>
+		<title>Edward's page!</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -34,10 +34,13 @@
 				<!-- Intro -->
 					<section id="intro" class="wrapper style1 fullscreen fade-up">
 						<div class="inner">
-							<h1>Edward, software engineer</h1>
-							<p>Hey there! I am a web developer with a passion for working on useful and fun apps. In trying to learn colloquial Chinese, I coded a chatroom that would English chat into Chinese, and have been fascinated since. More recently,
-								I wrote a typing game
-								
+							<h1>Edward and his projects!</h1>
+							<p>I am a web developer with a passion for working on fun and useful apps. 
+								One day I decided to fulfill 
+								I discovered my love for the web 
+								when I created a English-to-Chinese translation chatroom! Since then, 
+								I have focused upon making fun apps that capture my original love for somewhat useful
+								with the addition of modern technologies like React concomitant frontend ecosystem. It's been a journey and I'd love to continue it with you
 							<ul class="actions">
 								<li><a href="#one" class="button scrolly">See my work</a></li>
 							</ul>
