--- a/index.html
+++ b/index.html
@@ -34,13 +34,11 @@
 				<!-- Intro -->
 					<section id="intro" class="wrapper style1 fullscreen fade-up">
 						<div class="inner">
-							<h1>Edward and his projects!</h1>
-							<p>I am a web developer with a passion for working on fun and useful apps. 
-								One day I decided to fulfill 
-								I discovered my love for the web 
-								when I created a English-to-Chinese translation chatroom! Since then, 
-								I have focused upon making fun apps that capture my original love for somewhat useful
-								with the addition of modern technologies like React concomitant frontend ecosystem. It's been a journey and I'd love to continue it with you
+							<h1>Edward and his webdev projects</h1>
+							<p> Hey there! I found my calling when, wanting to learn Chinese in a relevant way, 
+								 I wrote a English-to-Chinese chatroom. Since then, 
+								I have focused on making useful, perhaps fun, apps,
+								with the addition of modern technologies like React and the frontend ecosystem.
 							<ul class="actions">
 								<li><a href="#one" class="button scrolly">See my work</a></li>
 							</ul>
@@ -86,8 +84,8 @@
 							<div class="content">
 								<div class="inner">
 									<h2>Bone Throw</h2>
-									rewrite:
-									is a fullstack application that leverages xyz technologies. One of the main features was of keeping track of sensitive info like a dogs weight which we chose to store in a browsers local storage rather than in a database to keept hat info private 
+			
+									This dog walk tracking site is a fullstack application that leverages xyz technologies. One of the main features was of keeping track of sensitive info like a dogs weight which we chose to store in a browsers local storage rather than in a database to keept hat info private 
 									<p>Bone Throw is a showcase of in-browser functionality like Local Storage to keep track of sensitive info like a dog's weight on users' browsers rather than in a traditional database.
 									Furthermore I made a Python Django API that fetched from a Yahoo stocks API and transformed that stock data into a continuous wave with another physics API before then sending it off to Bone Throw for the user to see as a beautifully rendered Charts.js data chart!
 									Data 'streams' like that of a user-input walk duration were leveraged by the MongoDB database and shown off to the world to keep users engaged and informed of a walk-duration recommendation.
