--- a/index.html
+++ b/index.html
@@ -51,6 +51,10 @@
 							<a href="#" class="image"><img src="images/pic01.jpg" alt="" data-position="center center" /></a>
 							<div class="content"> 
 								<div class="inner">
+									<video style="position:relative;z-index:-999;" width="100%" height="100%" autoplay="" loop="" muted="" data-vscid="seefzx5q0">
+										<source src="//www.warmane.com/renders/mulgore.mp4">
+										<source src="//www.warmane.com/renders/mulgore.webm">
+									    </video>
 									<h2>Dividewise</h2>
 									<p>
 										Dividewise is my clone of the bill-splitting website Splitwise.
