--- a/index.html
+++ b/index.html
@@ -34,7 +34,11 @@
 				<!-- Intro -->
 					<section id="intro" class="wrapper style1 fullscreen fade-up">
 						<div class="inner">
-							<h1>Edward and his webdev projects</h1>
+							<!-- https://codepen.io/gbnikolov/pen/jEqQdG -->
+							<link href='https://fonts.googleapis.com/css?family=Noto+Serif:700,700italic' rel='stylesheet' type='text/css'>
+							<canvas id='canvas1'></canvas>
+
+							<h1>Edward and webdev projects</h1>
 							<p> Hey there! I found my calling when, wanting to learn Chinese in a relevant way, 
 								 I wrote a English-to-Chinese chatroom. Since then, 
 								I have focused on making useful, perhaps fun, apps,
@@ -205,6 +209,9 @@
 			<script src="assets/js/breakpoints.min.js"></script>
 			<script src="assets/js/util.js"></script>
 			<script src="assets/js/main.js"></script>
+
+
+			<script src="customjs.js"></script>
 
 	</body>  
 </html>
