--- a/index.html
+++ b/index.html
@@ -35,14 +35,17 @@
 					<section id="intro" class="wrapper style1 fullscreen fade-up">
 						<div class="inner">
 							<!-- https://codepen.io/gbnikolov/pen/jEqQdG -->
+
+							<link href='https://fonts.googleapis.com/css?family=Permanent+Marker' rel='stylesheet' type='text/css'>
+
 							<link href='https://fonts.googleapis.com/css?family=Noto+Serif:700,700italic' rel='stylesheet' type='text/css'>
 							<canvas id='canvas1'></canvas>
 
-							<h1>Edward and webdev projects</h1>
-							<p> Hey there! I found my calling when, wanting to learn Chinese in a relevant way, 
-								 I wrote a English-to-Chinese chatroom. Since then, 
-								I have focused on making useful, perhaps fun, apps,
-								with the addition of modern technologies like React and the frontend ecosystem.
+							<h1>Welcome to my web portfolio!</h1>
+							<p> I discovered my love for coding when
+								I created a automatically-translating multi-language chatroom to learn a foreign language! Since then, 
+								I have focused on making fun apps
+								with the addition of modern technologies like React inside the frontend ecosystem.
 							<ul class="actions">
 								<li><a href="#one" class="button scrolly">See my work</a></li>
 							</ul>
@@ -55,15 +58,15 @@
 							<a href="#" class="image"><img src="images/pic01.jpg" alt="" data-position="center center" /></a>
 							<div class="content"> 
 								<div class="inner">
-									<video style="position:relative;z-index:-999;" width="100%" height="100%" autoplay="" loop="" muted="" data-vscid="seefzx5q0">
+									<!-- <video style="position:relative;z-index:-999;" width="100%" height="100%" autoplay="" loop="" muted="" data-vscid="seefzx5q0">
 										<source src="//www.warmane.com/renders/mulgore.mp4">
 										<source src="//www.warmane.com/renders/mulgore.webm">
-									    </video>
+									    </video> -->
 									<h2>Dividewise</h2>
 									<p>
-										Dividewise is my clone of the bill-splitting website Splitwise.
-										On the backend, I wrote it using the Ruby on Rails MVC framework and PostgreSQL as the database. The frontend was a work of React, Redux, Styled Components, CSS and HTML.
-										More recently, I've stuck in a google authentication inside the Rails controller with a google login page for OAuth!
+										Dividewise is my clone of the bill-splitting website Splitwise!
+										I wrote it using the Ruby on Rails MVC framework and PostgreSQL as the database. The frontend was a work of React, Redux, Styled Components, CSS and HTML.
+										You can find a Google&#169; authentication API call inside the Rails controller with a Google&#169; login page for OAuth!
 										I especially enjoyed adding tons of authenticating logic to make sure only people with the proper access could see and change bills because I believe that is important when it comes to pecuniary concerns.
 									</p>
 									<ul class="actions">
@@ -78,11 +81,11 @@
 								<div class="inner">
 									<h2>Typing Fantasy</h2>
 									<p>Typing Fantasy is a typing game that uses Javascript, Canvas, CSS and the principles of OOP. I fetched google translation APIs to voice the words that appear
-										above enemies which you can type to attack. Words per minute is tracked as well as a player's health. Additionally the game logic was bifurcated into a Chinese and English version and there is logic to load only the dictionary needed (to save a player's bandwidth!). High scores are tracked in a
+										above enemies, all of whom you can 'type to attack'. Words per minute is tracked as well as a player's health. Additionally the game logic was divided into a Chinese and English version and there is logic to load only the dictionary needed (to save a player's bandwidth!). High scores are tracked in a
 										in a json file to fit the interchange use-case. Keeping track of rendered frames and "layers" of what was on top of what was a real joy for me in this project.
 										Be sure to try it out!
 									<ul class="actions">
-										<li><a href="https://cryptic-escarpment-31838.herokuapp.com/" class="button">Show off your typing skills!</a></li>
+										<li><a href="https://cryptic-escarpment-31838.herokuapp.com/" class="button">Show off your typing  skills!</a></li>
 									</ul> 
 								</div>
 							</div>
@@ -92,8 +95,7 @@
 							<div class="content">
 								<div class="inner">
 									<h2>Bone Throw</h2>
-			
-									This dog walk tracking site is a fullstack application that leverages xyz technologies. One of the main features was of keeping track of sensitive info like a dogs weight which we chose to store in a browsers local storage rather than in a database to keept hat info private 
+									My dog walk tracking site is a fullstack application that leverages xyz technologies. One of the main features was of keeping track of sensitive info like a dogs weight which we chose to store in a browsers local storage rather than in a database to keept hat info private 
 									<p>Bone Throw is a showcase of in-browser functionality like Local Storage to keep track of sensitive info like a dog's weight on users' browsers rather than in a traditional database.
 									Furthermore I made a Python Django API that fetched from a Yahoo stocks API and transformed that stock data into a continuous wave with another physics API before then sending it off to Bone Throw for the user to see as a beautifully rendered Charts.js data chart!
 									Data 'streams' like that of a user-input walk duration were leveraged by the MongoDB database and shown off to the world to keep users engaged and informed of a walk-duration recommendation.
