--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+		
+		<link rel="stylesheet" href="customcss.css" />
+
 	</head>
 	<body class="is-preload">
 
@@ -80,7 +83,7 @@
 							<div class="content">
 								<div class="inner">
 									<h2>Typing Fantasy</h2>
-									<p>Typing Fantasy is a typing game that uses Javascript, Canvas, CSS and the principles of OOP. I fetched google translation APIs to voice the words that appear
+									<p>Typing Fantasy is a typing game that uses Javascript, Canvas, CSS, and the principles of OOP. I fetched google translation APIs to voice the words that appear
 										above enemies, all of whom you can 'type to attack'. Words per minute is tracked as well as a player's health. Additionally the game logic was divided into a Chinese and English version and there is logic to load only the dictionary needed (to save a player's bandwidth!). High scores are tracked in a
 										in a json file to fit the interchange use-case. Keeping track of rendered frames and "layers" of what was on top of what was a real joy for me in this project.
 										Be sure to try it out!
@@ -95,11 +98,11 @@
 							<div class="content">
 								<div class="inner">
 									<h2>Bone Throw</h2>
-									My dog walk tracking site is a fullstack application that leverages xyz technologies. One of the main features was of keeping track of sensitive info like a dogs weight which we chose to store in a browsers local storage rather than in a database to keept hat info private 
+									Our team-built dogwalk-tracking site is a fullstack application that leverages MongoDB, Express, React, and Node (the MERN stack). One of the main features was of keeping track of sensitive info like a dogs weight which we chose to store in a browsers local storage rather than in a database to keept hat info private 
 									<p>Bone Throw is a showcase of in-browser functionality like Local Storage to keep track of sensitive info like a dog's weight on users' browsers rather than in a traditional database.
 									Furthermore I made a Python Django API that fetched from a Yahoo stocks API and transformed that stock data into a continuous wave with another physics API before then sending it off to Bone Throw for the user to see as a beautifully rendered Charts.js data chart!
 									Data 'streams' like that of a user-input walk duration were leveraged by the MongoDB database and shown off to the world to keep users engaged and informed of a walk-duration recommendation.
-									</p>
+									</p> 
 									<ul class="actions">
 										<li><a href="https://pure-eyrie-29492.herokuapp.com/" class="button">Trade some stock!</a></li>
 									</ul>
@@ -111,36 +114,28 @@
 				<!-- Two -->
 					<section id="two" class="wrapper style3 fade-up">
 						<div class="inner">
-							<h2>What I do</h2>
-							rewrite: react javascirpt express mongodb. use png maybe
-							<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus, lacus eget hendrerit bibendum, urna est aliquam sem, sit amet imperdiet est velit quis lorem.</p>
+							<h2>Skills</h2>
 							<div class="features">
 								<section>
-									<span class="icon solid major fa-code"></span>
-									<h3>React</h3>
-									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
+									<img src="js.jpg">
+									<h3>Javascript</h3>
 								</section>
 								<section> 
-									<i class="fab fa-js-square"></i>
-									<span class="icon solid major fa-js-square"></span>
-									<h3>Aliquam sed nullam</h3>
-									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
+									<img src="node.png">
+									<h3>Node</h3>
 								</section>w
 								<section>
-									<span class="icon solid major fa-cog"></span>
-									<h3>Sed erat ullam corper</h3>
-									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
+									<img src="rails.png">
+									<h3>Ruby on Rails</h3>
 								</section>
 								<section>
-									<i class="fab fa-js-square"></i>
-									<span class="icon solid major fa-desktop"></span>
-									<h3>Veroeros quis lorem</h3>
-									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
+									<img src="react.png">
+									<h3>React</h3>
 								</section>
 						
 							</div>
 							<ul class="actions">
-								<li><a href="generic.html" class="button">Learn more</a></li>
+								<li><a href="generic.html" class="button">Read my resume</a></li>
 							</ul>
 						</div>
 					</section>
@@ -149,7 +144,7 @@
 					<section id="three" class="wrapper style1 fade-up">
 						<div class="inner">
 							<h2>Get in touch</h2>
-							<p>I am actively looking for opportunities!</p>
+							<p>I'm open to comments and opportunities!</p>
 							<div class="split style1">
 								<section>
 									<form method="post" action="#">
