--- a/index.html
+++ b/index.html
@@ -44,11 +44,11 @@
 							<link href='https://fonts.googleapis.com/css?family=Noto+Serif:700,700italic' rel='stylesheet' type='text/css'>
 							<canvas id='canvas1'></canvas>
 
-							<h1>Welcome to my web portfolio!</h1>
+							<h1>Welcome to my portfolio!</h1>
 							<p> I discovered my love for coding when
-								I created a automatically-translating multi-language chatroom to learn a foreign language! Since then, 
+								I created an auto-translating multi-language chatroom to learn a foreign language! Since then, 
 								I have focused on making fun apps
-								with the addition of modern technologies like React inside the frontend ecosystem.
+								with the addition of modern technologies like React and Node within the javascript ecosystem.
 							<ul class="actions">
 								<li><a href="#one" class="button scrolly">See my work</a></li>
 							</ul>
@@ -98,10 +98,13 @@
 							<div class="content">
 								<div class="inner">
 									<h2>Bone Throw</h2>
-									Our team-built dogwalk-tracking site is a fullstack application that leverages MongoDB, Express, React, and Node (the MERN stack). One of the main features was of keeping track of sensitive info like a dogs weight which we chose to store in a browsers local storage rather than in a database to keept hat info private 
-									<p>Bone Throw is a showcase of in-browser functionality like Local Storage to keep track of sensitive info like a dog's weight on users' browsers rather than in a traditional database.
-									Furthermore I made a Python Django API that fetched from a Yahoo stocks API and transformed that stock data into a continuous wave with another physics API before then sending it off to Bone Throw for the user to see as a beautifully rendered Charts.js data chart!
-									Data 'streams' like that of a user-input walk duration were leveraged by the MongoDB database and shown off to the world to keep users engaged and informed of a walk-duration recommendation.
+									<p>
+										Our team-built dogwalk-tracking site is a fullstack application that leverages MongoDB, Express, React, and Node (the MERN stack). One of the main features was of keeping track of sensitive info like a dogs weight which we chose to store in a browsers local storage rather than in a database to keept hat info private 
+									<p>
+									<p>
+										Bone Throw is a showcase of in-browser functionality like Local Storage to keep track of sensitive info like a dog's weight on users' browsers rather than in a traditional database.
+										Furthermore I made a Python Django API that fetched from a Yahoo stocks API and transformed that stock data into a continuous wave with another physics API before then sending it off to Bone Throw for the user to see as a beautifully rendered Charts.js data chart!
+										Data 'streams' like that of a user-input walk duration were leveraged by the MongoDB database and shown off to the world to keep users engaged and informed of a walk-duration recommendation.
 									</p> 
 									<ul class="actions">
 										<li><a href="https://pure-eyrie-29492.herokuapp.com/" class="button">Trade some stock!</a></li>
@@ -120,19 +123,26 @@
 									<img src="js.jpg">
 									<h3>Javascript</h3>
 								</section>
-								<section> 
-									<img src="node.png">
-									<h3>Node</h3>
-								</section>w
+								<section>
+									<img src="react.png">
+									<h3>React</h3>
+								</section>
 								<section>
 									<img src="rails.png">
 									<h3>Ruby on Rails</h3>
 								</section>
 								<section>
-									<img src="react.png">
-									<h3>React</h3>
+									<img src="express.png">
+									<h3>Express</h3>
 								</section>
-						
+								<section>
+									<img src="node.png">
+									<h3>Node</h3>
+								</section>
+								<section>
+									<img src="css.png">
+									<h3>CSS</h3>
+								</section>
 							</div>
 							<ul class="actions">
 								<li><a href="generic.html" class="button">Read my resume</a></li>
