--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
 				<!-- Intro -->
 					<section id="intro" class="wrapper style1 fullscreen fade-up">
-						<div class="inner">
+						<div id='parent' class="inner">
 							<!-- https://codepen.io/gbnikolov/pen/jEqQdG -->
 
 							<link href='https://fonts.googleapis.com/css?family=Permanent+Marker' rel='stylesheet' type='text/css'>
@@ -54,17 +54,26 @@
 							</ul>
 						</div>
 					</section>
+				
+					<img src="dividewise2.png" style="display:none;" />
+					<img src="dividewise.png" style="display:none;" />
+					<img src="typingfantasy2.png" style="display:none;" />
+					<img src="typingfantasy.png" style="display:none;" />
+					<img src="bonethrow2.png" style="display:none;" />
+					<img src="bonethrow.png" style="display:none;" />
 
 				<!-- One -->
 					<section id="one" class="wrapper style2 spotlights">
 						<section>
-							<a href="#" class="image"><img src="images/pic01.jpg" alt="" data-position="center center" /></a>
+							<a href="javascript:void(0);" class="image">
+																	<!-- <video style="position:relative;z-index:-999;" width="100%" height="100%" autoplay="" loop="" muted=""
+																		data-vscid="seefzx5q0">
+																		<source src="dividewise.mov">
+																	</video> -->
+								<img id='dividewise' src="dividewise.png" alt="" data-position="center center" />
+							</a>
 							<div class="content"> 
 								<div class="inner">
-									<!-- <video style="position:relative;z-index:-999;" width="100%" height="100%" autoplay="" loop="" muted="" data-vscid="seefzx5q0">
-										<source src="//www.warmane.com/renders/mulgore.mp4">
-										<source src="//www.warmane.com/renders/mulgore.webm">
-									    </video> -->
 									<h2>Dividewise</h2>
 									<p>
 										Dividewise is my clone of the bill-splitting website Splitwise!
@@ -73,41 +82,39 @@
 										I especially enjoyed adding tons of authenticating logic to make sure only people with the proper access could see and change bills because I believe that is important when it comes to pecuniary concerns.
 									</p>
 									<ul class="actions">
-										<li><a href="https://dividewise.herokuapp.com/" class="button">Split a bill!</a></li>
+										<li><a target="_blank" href="https://dividewise.herokuapp.com/" class="button">Split a bill!</a></li>
 									</ul>
 								</div>
 							</div>
 						</section>
 						<section>
-							<a href="#" class="image"><img src="images/pic02.jpg" alt="" data-position="top center" /></a>
+							<a href="javascript:void(0);" class="image"><img id="typingfantasy" src="typingfantasy.png" alt="" data-position="top center" /></a>
 							<div class="content">
 								<div class="inner">
 									<h2>Typing Fantasy</h2>
-									<p>Typing Fantasy is a typing game that uses Javascript, Canvas, CSS, and the principles of OOP. I fetched google translation APIs to voice the words that appear
-										above enemies, all of whom you can 'type to attack'. Words per minute is tracked as well as a player's health. Additionally the game logic was divided into a Chinese and English version and there is logic to load only the dictionary needed (to save a player's bandwidth!). High scores are tracked in a
-										in a json file to fit the interchange use-case. Keeping track of rendered frames and "layers" of what was on top of what was a real joy for me in this project.
+									<p>Typing Fantasy is a typing game that uses Javascript, Canvas, CSS, and the principles of OOP. I fetched from the Google&#169 Translation API to voice the words that appear
+										above enemies, all of whom you can 'type to attack'. Word targets were detected as a partial-or-full hit by a trie data structure. Words per minute is tracked as well as a player's health. Additionally the game logic was divided into a Chinese and English version and there is logic to load only the dictionary needed (to save a player's bandwidth!). High scores are tracked in a
+										in a json file to fit the interchange use-case.  Keeping track of rendered frames and "layers" of what was on top of what was a real joy for me in this project.
 										Be sure to try it out!
 									<ul class="actions">
-										<li><a href="https://cryptic-escarpment-31838.herokuapp.com/" class="button">Show off your typing  skills!</a></li>
+										<li><a target="_blank" href="https://cryptic-escarpment-31838.herokuapp.com/" class="button">Show off your typing  skills!</a></li>
 									</ul> 
 								</div>
 							</div>
 						</section>
 						<section>
-							<a href="#" class="image"><img src="images/pic03.jpg" alt="" data-position="25% 25%" /></a>
+							<a href="javascript:void(0);" class="image"><img id="bonethrow" src="bonethrow.png" alt="" data-position="25% 25%" /></a>
 							<div class="content">
 								<div class="inner">
 									<h2>Bone Throw</h2>
 									<p>
-										Our team-built dogwalk-tracking site is a fullstack application that leverages MongoDB, Express, React, and Node (the MERN stack). One of the main features was of keeping track of sensitive info like a dogs weight which we chose to store in a browsers local storage rather than in a database to keept hat info private 
-									<p>
-									<p>
-										Bone Throw is a showcase of in-browser functionality like Local Storage to keep track of sensitive info like a dog's weight on users' browsers rather than in a traditional database.
+										Our team-built dogwalk-tracking site is a fullstack application that leverages MongoDB, Express, React, and Node (the MERN stack). 
+										Bone Throw is a showcase of in-browser functionality like Local Storage to keep track of sensitive info like a dog's weight in users' browsers rather than in a traditional database.
 										Furthermore I made a Python Django API that fetched from a Yahoo stocks API and transformed that stock data into a continuous wave with another physics API before then sending it off to Bone Throw for the user to see as a beautifully rendered Charts.js data chart!
-										Data 'streams' like that of a user-input walk duration were leveraged by the MongoDB database and shown off to the world to keep users engaged and informed of a walk-duration recommendation.
+										Additionally, data 'streams' like that of many user-input walk durations were leveraged by the MongoDB database and shown off to the world to keep users engaged and informed of a walk recommendation.
 									</p> 
 									<ul class="actions">
-										<li><a href="https://pure-eyrie-29492.herokuapp.com/" class="button">Trade some stock!</a></li>
+										<li><a target="_blank" href="https://pure-eyrie-29492.herokuapp.com/" class="button">Trade some stock!</a></li>
 									</ul>
 								</div>
 							</div>
@@ -128,16 +135,16 @@
 									<h3>React</h3>
 								</section>
 								<section>
-									<img src="rails.png">
-									<h3>Ruby on Rails</h3>
+									<img src="node.png">
+									<h3>Node</h3>
 								</section>
 								<section>
 									<img src="express.png">
 									<h3>Express</h3>
 								</section>
 								<section>
-									<img src="node.png">
-									<h3>Node</h3>
+									<img src="rails.png">
+									<h3>Ruby on Rails</h3>
 								</section>
 								<section>
 									<img src="css.png">
@@ -145,7 +152,7 @@
 								</section>
 							</div>
 							<ul class="actions">
-								<li><a href="generic.html" class="button">Read my resume</a></li>
+								<li><a href="Resume_EdwardZhou.pdf" target="_blank" class="button">Read my resume</a></li>
 							</ul>
 						</div>
 					</section>
@@ -156,8 +163,8 @@
 							<h2>Get in touch</h2>
 							<p>I'm open to comments and opportunities!</p>
 							<div class="split style1">
-								<section>
-									<form method="post" action="#">
+								<!-- <section> -->
+									<!-- <form method="post" action="#">
 										<div class="fields">
 											<div class="field half">
 												<label for="name">Name</label>
@@ -176,19 +183,19 @@
 											<li><a href="" class="button submit">Send Message</a></li>
 										</ul>
 									</form>
-								</section>
-								<section>
+								</section> -->
+								<!-- <section> -->
 									<ul class="contact">
 										<li>
 											<h3>Email</h3>
-											<a href="#">edward@utexas.edu</a>
+											<a href="mailto:edward@utexas.edu">edward@utexas.edu</a>
 										</li>
 
 										<li>
 											<h3>Links</h3>
 											<ul class="icons">
-												<li><a href="https://github.com/featurerich1/" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
-												<li><a href="https://www.linkedin.com/in/edzhou/" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
+												<li><a href="https://github.com/featurerich1/" class="icon brands fa-github fa-large"> Github<span class="label">GitHub</span></a></li> 
+												<li><a href="https://www.linkedin.com/in/edzhou/" class="icon brands fa-linkedin-in fa-large"> Linkedin<span class="label">LinkedIn</span></a></li>
 											</ul>
 										</li>
 									</ul>
@@ -201,9 +208,9 @@
 
 		<!-- Footer -->
 			<footer id="footer" class="wrapper style1-alt">
-				<div class="inner">
+				<div class="inner"> 
 					<ul class="menu">
-						<li>&copy; Edward 2020.</li><li>Design: <a>HTML5 UP</a></li>
+						<li>&copy; 2020 Edward Zhou.</li><li>Design: <a>HTML5 UP</a></li>
 					</ul>
 				</div>
 			</footer>
