--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 		
 		<link rel="stylesheet" href="customcss.css" />
+		<link rel="shortcut icon" type="image/x-icon" href="icons8-monitor-64.png" />
 
 	</head>
 	<body class="is-preload">
@@ -194,8 +195,9 @@
 										<li>
 											<h3>Links</h3>
 											<ul class="icons">
-												<li><a href="https://github.com/featurerich1/" class="icon brands fa-github fa-large"> Github<span class="label">GitHub</span></a></li> 
-												<li><a href="https://www.linkedin.com/in/edzhou/" class="icon brands fa-linkedin-in fa-large"> Linkedin<span class="label">LinkedIn</span></a></li>
+												<li><a href="https://github.com/featurerich1/" target="_blank" class="icon brands fa-github"> Github<span class="label">GitHub</span></a></li> 
+												<li><a href="https://www.linkedin.com/in/edzhou/" target="_blank" class="icon brands fa-linkedin-in"> Linkedin<span class="label">LinkedIn</span></a></li>
+												<li><a id="fontcorrection" href="Resume_EdwardZhou.pdf" target="_blank" class="fab fa-react"> Resume<span class="label"> Resume<span class="label">Resume</span></a></li>
 											</ul>
 										</li>
 									</ul>
