--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 				<!-- One -->
 					<section id="one" class="wrapper style2 spotlights">
 						<section>
-							<a href="javascript:void(0);" class="image">
+							<a href="javascript:void(0);" style="cursor:initial;" class="image">
 																	<!-- <video style="position:relative;z-index:-999;" width="100%" height="100%" autoplay="" loop="" muted=""
 																		data-vscid="seefzx5q0">
 																		<source src="dividewise.mov">
@@ -89,7 +89,7 @@
 							</div>
 						</section>
 						<section>
-							<a href="javascript:void(0);" class="image"><img id="typingfantasy" src="typingfantasy.png" alt="" data-position="top center" /></a>
+							<a href="javascript:void(0);" style="cursor:initial;" class="image"><img id="typingfantasy" src="typingfantasy.png" alt="" data-position="top center" /></a>
 							<div class="content">
 								<div class="inner">
 									<h2>Typing Fantasy</h2>
@@ -104,7 +104,7 @@
 							</div>
 						</section>
 						<section>
-							<a href="javascript:void(0);" class="image"><img id="bonethrow" src="bonethrow.png" alt="" data-position="25% 25%" /></a>
+							<a href="javascript:void(0);" style="cursor:initial;" class="image"><img id="bonethrow" src="bonethrow.png" alt="" data-position="25% 25%" /></a>
 							<div class="content">
 								<div class="inner">
 									<h2>Bone Throw</h2>
