--- a/index.html
+++ b/index.html
@@ -15,7 +15,21 @@
 		<link rel="stylesheet" href="customcss.css" />
 		<link rel="shortcut icon" type="image/x-icon" href="icons8-monitor-64.png" />
 
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=G-4X3KV729FY"></script>
+	<script>
+		window.dataLayer = window.dataLayer || [];
+		function gtag() { dataLayer.push(arguments); }
+		gtag('js', new Date());
+
+		gtag('config', 'G-4X3KV729FY');
+	</script>
+
+
 	</head>
+
+
+
 	<body class="is-preload">
 
 		<!-- Sidebar -->
