--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
 								I created an auto-translating multi-language chatroom to learn a foreign language! Since then, 
 								I have focused on making fun apps
 								with the addition of modern technologies like React and Node within the javascript ecosystem.
+								Currently, I am looking for a full-stack or front-end focused position where I can further my Typescript and ECMAScript 2017 skills!
 							<ul class="actions">
 								<li><a href="#one" class="button scrolly">See my work</a></li>
 							</ul>
