--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 									<p>
 										Our team-built dogwalk-tracking site is a fullstack application that leverages MongoDB, Express, React, and Node (the MERN stack). 
 										Additionally, Bone Throw is a showcase of in-browser functionality like Local Storage to keep track of sensitive info like a dog's weight in users' browsers rather than in a traditional database.
-										Furthermore, I created a Python Django API that fetched from a Yahoo stocks API and transformed that stock data into a continuous wave with another physics API before then sending it off to Bone Throw for the user to see as a beautifully rendered Charts.js data chart!
+										Furthermore, we created a Python Django API that fetched from a Yahoo stocks API and transformed that stock data into a continuous wave with another physics API before then sending it off to Bone Throw for the user to see as a beautifully rendered Charts.js data chart!
 										Additionally, data 'streams' like that of many user-input walk durations were leveraged by the MongoDB database and shown off to the world to keep users engaged and informed of a walk recommendation.
 									</p> 
 									<ul class="actions">
