--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 							<p> I discovered my love for coding when
 								I created an auto-translating multi-language chatroom to learn a foreign language! Since then, 
 								I have focused on making fun apps
-								with the addition of modern technologies like React and Node within the javascript ecosystem.
+								with the addition of modern technologies like React and Node within the JavaScript ecosystem.
 								Currently, I am looking for a full-stack or front-end focused position where I can further my Typescript and ECMAScript 2017 skills!
 							<ul class="actions">
 								<li><a href="#one" class="button scrolly">See my work</a></li>
@@ -94,7 +94,7 @@
 									<p>
 										Dividewise is my clone of the bill-splitting website Splitwise!
 										I wrote it using the Ruby on Rails MVC framework and PostgreSQL as the database. The frontend was a work of React, Redux, Styled Components, CSS and HTML.
-										You can find a Google&#169; authentication API call inside the Rails controller with a Google&#169; login page for OAuth!
+										You can find a Google<sup>&#169;</sup> authentication API call inside the Rails controller with a Google login page for OAuth!
 										I especially enjoyed adding tons of authenticating logic to make sure only people with the proper access could see and change bills because I believe that is important when it comes to pecuniary concerns.
 									</p>
 									<ul class="actions">
@@ -108,7 +108,7 @@
 							<div class="content">
 								<div class="inner">
 									<h2>Typing Fantasy</h2>
-									<p>Typing Fantasy is a typing game that uses Javascript, Canvas, CSS, and the principles of OOP. I fetched from the Google&#169 Translation API to voice the words that appear
+									<p>Typing Fantasy is a typing game that uses Javascript, Canvas, CSS, and the principles of OOP. I fetched from Google<sup>&#169</sup>Translation API to voice the words that appear
 										above enemies, all of whom you can 'type to attack'. Word targets were detected as a partial-or-full hit by a trie data structure. Words per minute is tracked as well as a player's health. Additionally the game logic was divided into a Chinese and English version and there is logic to load only the dictionary needed (to save a player's bandwidth!). High scores are tracked in a
 										in a json file to fit the interchange use-case.  Keeping track of rendered frames and "layers" of what was on top of what was a real joy for me in this project.
 										Be sure to try it out!
@@ -124,8 +124,8 @@
 								<div class="inner">
 									<h2>Bone Throw</h2>
 									<p>
-										Our team-built dogwalk-tracking site is a fullstack application that leverages MongoDB, Express, React, and Node (the MERN stack). 
-										Additionally, Bone Throw is a showcase of in-browser functionality like Local Storage to keep track of sensitive info like a dog's weight in users' browsers rather than in a traditional database.
+										Bone Throw is a team-built dogwalk-tracking site is a fullstack application that leverages MongoDB, Express, React, and Node (the MERN stack). 
+										It showcases the judicious use of modern in-browser functionality like Local Storage to keep track of sensitive info like a dog's weight in users' browsers rather than in a traditional database.
 										Furthermore, we created a Python Django API that fetched from a Yahoo stocks API and transformed that stock data into a continuous wave with another physics API before then sending it off to Bone Throw for the user to see as a beautifully rendered Charts.js data chart!
 										Additionally, data 'streams' like that of many user-input walk durations were leveraged by the MongoDB database and shown off to the world to keep users engaged and informed of a walk recommendation.
 									</p> 
